# titania

./: .gitignore  AGENTS.md  CHANGELOG.md  Cargo.toml  README.md  VISION.md  WHY_RUST_ONLY.md  architecture-spec.md  clippy.toml  deny.toml  rust-toolchain.toml  v1-progress-report.html  v1-spec.md
crates/titania-aggregate/: Cargo.toml
crates/titania-aggregate/src/: artifact_reader.rs  lib.rs  receipt_builder.rs  report_assembly.rs
crates/titania-aggregate/tests/: artifact_reader.rs  receipt_builder.rs  report_assembly.rs
crates/titania-check/: Cargo.toml  build.rs
crates/titania-check/src/: aggregate.rs  args.rs  doctor.rs  explain.rs  main.rs  moon.rs  version.rs
crates/titania-check/src/args/: parse.rs
crates/titania-check/tests/: aggregate_cli.rs  cli_dispatch.rs  doctor.rs  emit_restriction.rs  explain.rs  killer_demo.rs  template_prepush.rs
crates/titania-dylint/: Cargo.toml
crates/titania-dylint/src/: functional_surface.rs  lib.rs  panic_surface.rs
crates/titania-dylint/tests/: allow_required.rs  internal_escape.rs  policy_surface.rs
crates/titania-lanes/: Cargo.toml
crates/titania-lanes/rules/: architecture.yml  bypass.yml  functional.yml
crates/titania-lanes/src/: artifact_writer.rs  ast_grep_catalog.rs  ast_grep_lane.rs  clippy_normalizer.rs  command.rs  deny_normalizer.rs  discover.rs  dylint_lane.rs  helpers.rs  lib.rs  panic_scan_lane.rs  policy_run_lane.rs  policy_scan.rs  run_cargo_lane.rs  run_lane.rs  run_lane_dylint.rs  run_lane_kani.rs  run_lane_outcome.rs  run_lane_sources.rs  source_line.rs
crates/titania-lanes/src/ast_grep_lane/: engine.rs  pathing.rs  rules.rs  source_clean.rs  span.rs
crates/titania-lanes/src/ast_grep_lane/rules/: detectors.rs  filters.rs
crates/titania-lanes/src/ast_grep_lane/rules/detectors/: code_scan.rs
crates/titania-lanes/src/command/: budget.rs  env_filter.rs  error.rs  execution.rs  output.rs  process.rs  reader.rs
crates/titania-lanes/src/command/tests/: env_filter.rs
crates/titania-lanes/src/panic_scan_lane/: paths.rs  scan.rs
crates/titania-lanes/src/policy_scan/: cargo_config.rs  cargo_lints.rs  env_vars.rs  exceptions.rs
crates/titania-lanes/src/policy_scan/cargo_lints/: line_lookup.rs
crates/titania-lanes/src/run_cargo/: args.rs  mod.rs  outcome.rs
crates/titania-lanes/src/run_lane_mutants/: baseline.rs  command.rs  constants.rs  error.rs  mod.rs  operators.rs  outcomes.rs  report.rs  state.rs  survivors.rs  version.rs
crates/titania-lanes/src/source_line/: parser.rs  strategy.rs
crates/titania-lanes/tests/: artifact_writer.rs  ast_grep_architecture.rs  ast_grep_bypass.rs  ast_grep_catalog_dispatch.rs  ast_grep_cfg_test_skip.rs  ast_grep_functional.rs  ast_grep_lane.rs  ast_grep_span_accuracy.rs  bdd_target_project.rs  build_lane.rs  clippy_command.rs  clippy_normalizer.rs  command_env_scrub.rs  command_public_api.rs  compile_lane.rs  deny_normalizer.rs  docs_contract.rs  dylint_loader.rs  dylint_reject_repair.rs  external_target_policy.rs  fmt_lane.rs  guard_api_regressions.rs  kani_list_public_api.rs  moon_task_graph.rs  panic_scan.rs  policy_scan_cargo_config.rs  policy_scan_cargo_lints.rs  policy_scan_env_vars.rs  policy_scan_exceptions.rs  run_cargo_public_api.rs  run_lane_sources.rs  rust_verification_gauntlet_target.rs  scanner_target_project.rs  source_line.rs  template_metadata.rs  test_lane.rs  toolchain_config.rs  v15_atomic_baseline.rs  v1_config_contract.rs  verify_verus_public_api.rs
crates/titania-lanes/tests/fixtures/ast_grep/: build.rs
crates/titania-lanes/tests/fixtures/ast_grep/architecture/: allowed_no_core_fs_import.rs  allowed_no_core_time_import.rs  architecture_import_core_fs_direct_violation.rs  architecture_import_core_fs_grouped_violation.rs  architecture_import_core_fs_module_violation.rs  architecture_import_core_fs_violation.rs  architecture_import_core_infra_direct_violation.rs  architecture_import_core_infra_violation.rs  architecture_import_core_time_violation.rs
crates/titania-lanes/tests/fixtures/ast_grep/bypass/: allowed_generated_include_in_block_comment.rs  allowed_generated_include_in_line_comment.rs  allowed_generated_include_in_raw_string_literal.rs  allowed_generated_include_in_string_literal.rs  bypass_allow_attr_violation.rs  (+10 more)
crates/titania-lanes/tests/fixtures/clippy/: malformed_only.jsonl  unknown_lint.jsonl  unwrap.jsonl  warning_only.jsonl
crates/titania-lanes/tests/fixtures/deny/: advisory.json  banned_crate.json  duplicate_versions.json  license.json  malformed_non_json.txt  unknown_git.json  unknown_registry.json
crates/titania-lanes/tests/fixtures/dylint/: bypass_pub_allow_clean.rs  bypass_pub_allow_violation.rs
crates/titania-lanes/tests/fixtures/panic_scan/: assert_eq_violation.rs  assert_ne_violation.rs  assert_violation.rs  clean_source.rs  unreachable_violation.rs
crates/titania-lints/: Cargo.toml
crates/titania-lints/src/: lib.rs
crates/titania-output/: Cargo.toml
crates/titania-output/rules/: explain.tsv
crates/titania-output/src/: doctor.rs  explain.rs  lib.rs
crates/titania-output/tests/: explain.rs
crates/titania-policy/: Cargo.toml
crates/titania-policy/src/: digest.rs  exceptions.rs  lib.rs  profile.rs
crates/titania-policy/tests/: defaults.rs  policy_digest.rs  profile_exceptions.rs
fixtures/strict_ai_loop_unwrap/repaired/: Cargo.toml
fixtures/strict_ai_loop_unwrap/repaired/src/: lib.rs
fuzz/: Cargo.toml  README.md
fuzz/fuzz_targets/: fuzz_parse_inventory.rs  fuzz_parse_lane_outcome.rs  fuzz_parse_outcomes.rs  fuzz_parse_records.rs
fuzz/fuzz_targets/corpus_parse_inventory/: seed1.json
fuzz/fuzz_targets/corpus_parse_lane_outcome/: seed1.json
fuzz/fuzz_targets/corpus_parse_outcomes/: seed1.json
fuzz/fuzz_targets/corpus_parse_records/: seed1.json
titania/template/: .gitignore  Cargo.toml  README.md  cargo-generate.toml  clippy.toml  deny.toml
titania/template/.cargo/: config.toml
titania/template/.moon/: workspace.yml
titania/template/.moon/tasks/: all.yml
titania/template/.titania/profiles/strict-ai/: exceptions.toml  policy.toml
titania/template/src/: lib.rs
(+635 files in other folders)
