[workspace]
members  = [ "crates/titania-core", "crates/titania-lanes" ]
resolver = "3"

[workspace.package]
edition = "2024"
rust-version = "1.85"
license = "MIT OR Apache-2.0"
authors = ["Titania Contributors"]

[workspace.lints.rust]
unsafe_code = "forbid"
unused_must_use = "deny"
unreachable_pub = "deny"
rust_2018_idioms = { level = "deny", priority = -1 }
non_exhaustive_omitted_patterns = "deny"
unexpected_cfgs = { level = "warn", check-cfg = ["cfg(kani)"] }

[workspace.lints.clippy]
all = { level = "deny", priority = -1 }
pedantic = { level = "deny", priority = -1 }
nursery = { level = "deny", priority = -1 }
cargo = { level = "deny", priority = -1 }
multiple_crate_versions = { level = "allow", priority = 1 }

# Holzman Rust forbidden surface (slice 1).
unwrap_used = "deny"
expect_used = "deny"
panic = "deny"
todo = "deny"
unimplemented = "deny"
indexing_slicing = "deny"
string_slice = "deny"
get_unwrap = "deny"
arithmetic_side_effects = "deny"
dbg_macro = "deny"
as_conversions = "deny"
let_underscore_must_use = "deny"
await_holding_lock = "deny"
unwrap_or_default = "deny"
exit = "deny"
default_numeric_fallback = "deny"
missing_errors_doc = "deny"

[workspace.metadata.titania]
strict_ai = true
schema_version = 1

[profile.dev]
opt-level = 0
debug = true

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
