[package]
name = "titania-aggregate"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
description = "v1 lane-artifact reader: reads expected outputs in GateScope order."
publish = false

[lib]
path = "src/lib.rs"

[dependencies]
titania-core = { version = "0.1.0", path = "../titania-core" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0.18"

[lints]
workspace = true

[dev-dependencies]
tempfile = "3.27.0"
