[package]
name = "titania-aggregate"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
description = "v1 lane-artifact reader: reads expected outputs in GateScope order."
repository = "https://github.com/lprior-repo/titania"
readme = "../../README.md"
keywords = ["quality", "aggregator", "lane", "receipt", "qa"]
categories = ["development-tools"]

[lib]
path = "src/lib.rs"

[dependencies]
titania-core = { version = "0.1.0", path = "../titania-core" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0.18"

[package.metadata.cargo-machete]
# `serde` is used via `#[derive(Serialize, Deserialize)]` attributes on
# many types; cargo-machete cannot detect derive-macro usages.
ignored = ["serde"]

[lints]
workspace = true

[dev-dependencies]
tempfile = "3.27.0"
