[package]
name = "titania-check"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
description = "CLI front-end for Titania quality gates."
publish = false

[[bin]]
name = "titania-check"
path = "src/main.rs"

[dependencies]
titania-core = { version = "0.1.0", path = "../titania-core" }
titania-aggregate = { version = "0.1.0", path = "../titania-aggregate" }
serde_json = "1.0"

[dev-dependencies]
serde_json = "1.0"
tempfile = "3.27.0"

[lints]
workspace = true
