[package]
name = "titania-check"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
description = "CLI front-end for Titania quality gates."
repository = "https://github.com/lprior-repo/titania"
readme = "../../README.md"
keywords = ["quality-gate", "ci", "lint", "moon", "cli"]
categories = ["development-tools", "command-line-utilities"]

[[bin]]
name = "titania-check"
path = "src/main.rs"

[dependencies]
titania-core = { version = "0.1.0", path = "../titania-core" }
titania-aggregate = { version = "0.1.0", path = "../titania-aggregate" }
titania-output = { version = "0.1.0", path = "../titania-output" }
titania-lanes = { version = "0.1.0", path = "../titania-lanes" }
titania-policy = { version = "0.1.0", path = "../titania-policy" }
serde_json = "1.0"
wait-timeout = "0.2.1"

[build-dependencies]
serde_json = "1.0"

[dev-dependencies]
serde_json = "1.0"
tempfile = "3.27.0"

[lints]
workspace = true

# cargo-binstall: `cargo binstall titania-check` fetches the prebuilt
# binary produced by .github/workflows/release.yml on tag `v*`. The binary
# name is `titania-check` (== package name). Assets are named
# `titania-check-<target>-v<version>.tar.gz`.
[package.metadata.binstall]
pkg-url = "{ repo }/releases/download/v{ version }/{ name }-{ target }-v{ version }.{ archive-suffix }"
bin-dir = "{ bin }{ binary-ext }"
pkg-fmt = "tgz"
