[package]
name = "titania-dylint"
version = "0.0.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
description = "Dylint plugin surface for Titania strict-ai bypass rules."
repository = "https://github.com/lprior-repo/titania"
readme = "../../README.md"
keywords = ["dylint", "lint", "rust", "quality"]
categories = ["development-tools"]
publish = false

[lib]
crate-type = ["cdylib"]
doctest = false

[lints]
workspace = true

[dependencies]
