[package]
name = "titania-lanes"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
description = "Typed Rust lanes behind `.moon/tasks/all.yml`. Each bin target implements a v1-spec lane outcome (Cargo-native or specialized verification), tracked by P0 beads (`tn-2cn.*`, `tn-37r.*`, `tn-8ab.*`, `tn-cgk.*`, `tn-d2l.*`)."
publish = false

[lib]
path = "src/lib.rs"

[[bin]]
name = "check-beads-server-mode"
path = "src/bin/check_beads_server_mode.rs"

[[bin]]
name = "check-agent-cli-contract"
path = "src/bin/check_agent_cli_contract.rs"

[[bin]]
name = "check-public-api-diff"
path = "src/bin/check_public_api_diff.rs"

[[bin]]
name = "check-workspace-assertions"
path = "src/bin/check_workspace_assertions.rs"

[[bin]]
name = "check-test-integrity"
path = "src/bin/check_test_integrity.rs"

[[bin]]
name = "check-hot-cold-forbidden-apis"
path = "src/bin/check_hot_cold_forbidden_apis.rs"

[[bin]]
name = "flux-check-package"
path = "src/bin/flux_check_package.rs"

[[bin]]
name = "forbidden-scan"
path = "src/bin/forbidden_scan.rs"

[[bin]]
name = "fuzz-minimization"
path = "src/bin/fuzz_minimization.rs"

[[bin]]
name = "run-tlc-checks"
path = "src/bin/run_tlc_checks.rs"

[[bin]]
name = "verify-lean"
path = "src/bin/verify_lean.rs"

[[bin]]
name = "check-panic-surface"
path = "src/bin/check_panic_surface.rs"

[[bin]]
name = "check-nightly-features"
path = "src/bin/check_nightly_features.rs"



[[bin]]
name = "check-source-length"
path = "src/bin/check_source_length.rs"

[[bin]]
name = "check-stepstate-matrix"
path = "src/bin/check_stepstate_matrix.rs"

[[bin]]
name = "check-verus-production-binding"
path = "src/bin/check_verus_production_binding.rs"

[[bin]]
name = "verify-no-legacy-primitives"
path = "src/bin/verify_no_legacy_primitives.rs"

[[bin]]
name = "check-error-exhaustiveness"
path = "src/bin/check_error_exhaustiveness.rs"

[[bin]]
name = "check-ignored-fallible-results"
path = "src/bin/check_ignored_fallible_results.rs"

[[bin]]
name = "hotpath-scan"
path = "src/bin/hotpath_scan.rs"

[[bin]]
name = "check-production-inner-drift"
path = "src/bin/check_production_inner_drift.rs"

[[bin]]
name = "kani-list"
path = "src/bin/kani_list.rs"

[[bin]]
name = "loom-list"
path = "src/bin/loom_list.rs"

[[bin]]
name = "guard-zero-tests"
path = "src/bin/guard_zero_tests.rs"

[[bin]]
name = "bench-instruction-counts"
path = "src/bin/bench_instruction_counts.rs"

[[bin]]
name = "verify-verus"
path = "src/bin/verify_verus.rs"

[[bin]]
name = "rust-verification-gauntlet"
path = "src/bin/rust_verification_gauntlet.rs"

[[bin]]
name = "run-cargo"
path = "src/bin/run_cargo.rs"

[[bin]]
name = "policy-scan"
path = "src/bin/policy_scan.rs"

[dependencies]
titania-core = { version = "0.1.0", path = "../titania-core" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
smallvec = "1.15.2"
wait-timeout = "0.2.1"
thiserror = "2.0.18"
toml_edit = { workspace = true, features = ["serde"] }
titania-policy = { version = "0.1.0", path = "../titania-policy" }
ast-grep-core = { version = "0.44", features = ["tree-sitter"] }
ast-grep-language = { version = "0.44", default-features = false, features = ["tree-sitter-rust"] }

[package.metadata.cargo-machete]
# `serde` is used via `#[derive(Serialize, Deserialize)]` attributes on
# many types; cargo-machete cannot detect derive-macro usages.
ignored = ["serde"]
[lints]
workspace = true

[dev-dependencies]
tempfile = "3.27.0"
anyhow = "1"
