[package]
name = "titania-lanes"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
description = "Typed Rust lanes behind `.moon/tasks/all.yml`. Each bin target implements a v1-spec lane outcome (Cargo-native or specialized verification), tracked by P0 beads (`tn-2cn.*`, `tn-37r.*`, `tn-8ab.*`, `tn-cgk.*`, `tn-d2l.*`)."
repository = "https://github.com/lprior-repo/titania"
readme = "../../README.md"
keywords = ["quality", "lane", "fmt", "clippy", "ci"]
categories = ["development-tools", "development-tools::testing"]

[lib]
path = "src/lib.rs"

[dependencies]
titania-core = { version = "0.1.0", path = "../titania-core" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
smallvec = "1.15.2"
wait-timeout = "0.2.1"
camino = { version = "1.2.4", features = ["serde1"] }
thiserror = "2.0.18"
toml_edit = { workspace = true, features = ["serde"] }
titania-policy = { version = "0.1.0", path = "../titania-policy" }
ast-grep-core = { version = "0.44", features = ["tree-sitter"] }
ast-grep-language = { version = "0.44", default-features = false, features = ["tree-sitter-rust"] }

[package.metadata.cargo-machete]
# `serde` is used via `#[derive(Serialize, Deserialize)]` attributes on
# many types; cargo-machete cannot detect derive-macro usages.
ignored = ["serde"]
[lints]
workspace = true

[dev-dependencies]
tempfile = "3.27.0"
anyhow = "1"
loom = "0.7"
