[package]
name = "titania-output"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
description = "Shared typed output contracts for titania doctor and explain commands."
repository = "https://github.com/lprior-repo/titania"
readme = "../../README.md"
keywords = ["quality", "output", "doctor", "explain", "qa"]
categories = ["development-tools"]

[lib]
path = "src/lib.rs"

[dependencies]
thiserror = "2"
titania-core = { version = "0.1.0", path = "../titania-core" }

[lints]
workspace = true
